codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1088
expression: active_blob(&chat)
---
• Exploring · 1 active · 0 done
  └ Listing ls -la
