codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1095
expression: active_blob(&chat)
---
• Explored · 1 operation
  └ Listed ls -la · 0 entries
