codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1099
expression: active_blob(&chat)
---
• Exploring · 1 active · 1 done
  ├ Reading foo.txt
  └ Listed ls -la · 0 entries
