codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1109
expression: active_blob(&chat)
---
• Explored · 1 file · 2 operations
  ├ Listed ls -la · 0 entries
  └ Read foo.txt · 1 line · 14 chars
