codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1120
expression: active_blob(&chat)
---
• Explored · 1 file · 3 operations
  ├ Listed ls -la · 0 entries
  └ Read foo.txt ×2 · 2 lines · 19 chars
