codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1131
expression: active_blob(&chat)
---
• Explored · 2 files · 4 operations
  ├ Listed ls -la · 0 entries
  ├ Read foo.txt ×2 · 2 lines · 19 chars
  └ Read bar.txt · 1 line · 14 chars
