codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_reasoning_then_message_without_deltas_are_rendered.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: combined
---
› Here is the result.
